app/pb_kits/playbook/pb_filter/_filter.scss
@import "../tokens/spacing";
@import "../tokens/colors";

.pb_filter_sort_menu {
  li {
    padding: 0 $space_sm !important;
  }
  [class^=pb_button_kit][class*=_link]{
    flex-shrink:0;
    padding: 0 $space_xs !important;
    [id^="sort"]{
      margin-left: $space_xs !important;
    }
  }
  [class^=pb_card_body_kit][class*=_md]{
    padding: 0 !important;
  }
}

[class^=pb_filter_kit] {
  [class^=pb_circle_icon_button_kit]{
    padding-left: $space_sm !important;
    padding-top: $space_sm !important;
    padding-bottom: $space_sm !important;
  }
  [class^=pb-form]{
    padding: $space_sm ;
  }
   .sort-by{
    flex-shrink:0;
    margin-left: $space_xs !important;
  }
  .filter-results{
    margin-left: $space_xs !important;
    margin-right: $space_xs !important;
    flex-shrink:0 !important;
  }
  .filter-bottom{
    padding-left: $space_sm !important;
    padding-right: $space_sm !important;
  }
  .maskContainer{
      display: flex;
      overflow-x: hidden;
      align-items: center;
      flex-grow: 1;
  }
  .filters {
    display: flex;
    flex-shrink: 1;
    flex-wrap: nowrap;
    overflow-x: auto;
    padding-right: 80px;
    padding-top: $space_md;
    padding-bottom: $space_md;

   &::-webkit-scrollbar{
       display: none;
   }
    .filter {
      flex: 0 0 auto;
      padding-left: $space_xs;
      padding-right: $space_xs;
      border-right: 1px solid $border_light !important;
    }

}
.maskContainer::after {
    content: " ";
    background-image: linear-gradient(to right, rgba($card_light,.3) , rgba($card_light,1));
    height: 48px;
    padding-left: $space_xl;
    margin-left: -$space_lg;
    z-index: 1;
}
.maskContainer::before {
    content: " ";
    background-image: linear-gradient(to left, rgba($card_light,.3) , rgba($card_light,1));
    height: 48px;
    padding-right: $space_sm;
    margin-right: -$space_xs;
    z-index: 1;
}

}

